[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = [
    "cors",
    "trace",
    "compression-full",
    "auth",
] }
tower = { version = "0.4", features = [
    "util",
    "filter",
    "timeout",
    "load-shed",
    "limit",
] }
axum-macros = "0.2.3"
error-stack = "0.1.1"
tracing = "0.1.36"
anyhow = { version = "1.0.65", features = ["backtrace"] }
