[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4.3", features = [
  "cors",
  "trace",
  "compression-full",
  "auth",
] }
tower = { version = "0.4.13", features = [
  "util",
  "filter",
  "timeout",
  "load-shed",
  "limit",
] }
axum-macros = "0.3.8"
error-stack = "0.3.1"
tracing = "0.1.37"
anyhow = { version = "1.0.74", features = ["backtrace"] }
