[package]
name = "keycloak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.1.1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
thiserror = "1.0.35"
